--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ li a:hover:not(.active) {
 	font-weight: 700px;
 	margin-bottom: 10px;
 	color: white;
+	animation: text 3s 1;
 
 }
 
@@ -80,7 +81,7 @@ li a:hover:not(.active) {
 @keyframes text{
 	0%{
 		color: black;
-		margin-bottom: -40px;
+		margin-left: -60px;
 	}
 }
 
@@ -105,6 +106,9 @@ li a:hover:not(.active) {
 }
 
 .copyright {
-	margin-top: 180px; 
+	margin-left: 60px;
+	margin-top: 530px;
+	font-weight: normal;
+	font-size: 15px;
 	color: white;
 }
